; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/usp10/extr_shape.c_mark_invalid_combinations.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/usp10/extr_shape.c_mark_invalid_combinations.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32*, i32, i32*, i32*, i32, i32*, i64 (i32)*)* @mark_invalid_combinations to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mark_invalid_combinations(i32 %0, i32* %1, i32 %2, i32* %3, i32* %4, i32 %5, i32* %6, i64 (i32)* %7) #0 {
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32*, align 8
  %16 = alloca i64 (i32)*, align 8
  %17 = alloca i64*, align 8
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  store i32 %0, i32* %9, align 4
  store i32* %1, i32** %10, align 8
  store i32 %2, i32* %11, align 4
  store i32* %3, i32** %12, align 8
  store i32* %4, i32** %13, align 8
  store i32 %5, i32* %14, align 4
  store i32* %6, i32** %15, align 8
  store i64 (i32)* %7, i64 (i32)** %16, align 8
  store i32 9676, i32* %20, align 4
  %22 = load i32, i32* %11, align 4
  %23 = call i64* @heap_alloc(i32 %22)
  store i64* %23, i64** %17, align 8
  store i32 0, i32* %18, align 4
  br label %24

24:                                               ; preds = %40, %8
  %25 = load i32, i32* %18, align 4
  %26 = load i32, i32* %11, align 4
  %27 = icmp slt i32 %25, %26
  br i1 %27, label %28, label %43

28:                                               ; preds = %24
  %29 = load i64 (i32)*, i64 (i32)** %16, align 8
  %30 = load i32*, i32** %10, align 8
  %31 = load i32, i32* %18, align 4
  %32 = sext i32 %31 to i64
  %33 = getelementptr inbounds i32, i32* %30, i64 %32
  %34 = load i32, i32* %33, align 4
  %35 = call i64 %29(i32 %34)
  %36 = load i64*, i64** %17, align 8
  %37 = load i32, i32* %18, align 4
  %38 = sext i32 %37 to i64
  %39 = getelementptr inbounds i64, i64* %36, i64 %38
  store i64 %35, i64* %39, align 8
  br label %40

40:                                               ; preds = %28
  %41 = load i32, i32* %18, align 4
  %42 = add nsw i32 %41, 1
  store i32 %42, i32* %18, align 4
  br label %24

43:                                               ; preds = %24
  %44 = load i32, i32* %9, align 4
  %45 = call i32 @GetGlyphIndicesW(i32 %44, i32* %20, i32 1, i32* %21, i32 0)
  store i32 1, i32* %18, align 4
  store i32 1, i32* %19, align 4
  br label %46

46:                                               ; preds = %84, %43
  %47 = load i32, i32* %18, align 4
  %48 = load i32, i32* %11, align 4
  %49 = sub nsw i32 %48, 1
  %50 = icmp slt i32 %47, %49
  br i1 %50, label %51, label %89

51:                                               ; preds = %46
  %52 = load i64*, i64** %17, align 8
  %53 = load i32, i32* %18, align 4
  %54 = sext i32 %53 to i64
  %55 = getelementptr inbounds i64, i64* %52, i64 %54
  %56 = load i64, i64* %55, align 8
  %57 = icmp ne i64 %56, 0
  br i1 %57, label %58, label %83

58:                                               ; preds = %51
  %59 = load i64*, i64** %17, align 8
  %60 = load i32, i32* %18, align 4
  %61 = load i32, i32* %14, align 4
  %62 = add nsw i32 %60, %61
  %63 = sext i32 %62 to i64
  %64 = getelementptr inbounds i64, i64* %59, i64 %63
  %65 = load i64, i64* %64, align 8
  %66 = load i64*, i64** %17, align 8
  %67 = load i32, i32* %18, align 4
  %68 = sext i32 %67 to i64
  %69 = getelementptr inbounds i64, i64* %66, i64 %68
  %70 = load i64, i64* %69, align 8
  %71 = icmp eq i64 %65, %70
  br i1 %71, label %72, label %83

72:                                               ; preds = %58
  %73 = load i32*, i32** %12, align 8
  %74 = load i32*, i32** %13, align 8
  %75 = load i32, i32* %11, align 4
  %76 = load i32, i32* %14, align 4
  %77 = load i32, i32* %21, align 4
  %78 = load i32, i32* %19, align 4
  %79 = load i32*, i32** %15, align 8
  %80 = call i32 @insert_glyph(i32* %73, i32* %74, i32 %75, i32 %76, i32 %77, i32 %78, i32* %79)
  %81 = load i32, i32* %19, align 4
  %82 = add nsw i32 %81, 1
  store i32 %82, i32* %19, align 4
  br label %83

83:                                               ; preds = %72, %58, %51
  br label %84

84:                                               ; preds = %83
  %85 = load i32, i32* %18, align 4
  %86 = add nsw i32 %85, 1
  store i32 %86, i32* %18, align 4
  %87 = load i32, i32* %19, align 4
  %88 = add nsw i32 %87, 1
  store i32 %88, i32* %19, align 4
  br label %46

89:                                               ; preds = %46
  %90 = load i64*, i64** %17, align 8
  %91 = call i32 @heap_free(i64* %90)
  ret void
}

declare dso_local i64* @heap_alloc(i32) #1

declare dso_local i32 @GetGlyphIndicesW(i32, i32*, i32, i32*, i32) #1

declare dso_local i32 @insert_glyph(i32*, i32*, i32, i32, i32, i32, i32*) #1

declare dso_local i32 @heap_free(i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
